tests/purs/failing/CoercibleRepresentational.out
Error found:
in module [33mMain[0m
at tests/purs/failing/CoercibleRepresentational.purs:11:20 - 11:26 (line 11, column 20 - line 11, column 26)

  No type class instance was found for
  [33m                          [0m
  [33m  Prim.Coerce.Coercible a0[0m
  [33m                        b1[0m
  [33m                          [0m

while checking that type [33mforall a b. Coercible a b => a -> b[0m
  is at least as general as type [33mPhantom a0 -> Phantom b1[0m
while checking that expression [33mcoerce[0m
  has type [33mPhantom a0 -> Phantom b1[0m
in value declaration [33mphantomToPhantom[0m

where [33mb1[0m is a rigid type variable
        bound at (line 11, column 20 - line 11, column 26)
      [33ma0[0m is a rigid type variable
        bound at (line 11, column 20 - line 11, column 26)

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

